# docs/swagger.json
@@ -4,9 +4,59 @@
         "contact": {}
     },
     "paths": {
+        "/example/hello": {
+            "get": {
+                "description": "just hello",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "hello example",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name in query",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "post": {
+                "description": "Check Hello struct on repo",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "hello example",
+                "parameters": [
+                    {
+                        "description": "ID and Name here",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/repo.Hello"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/example/hello/{name}": {
             "get": {
-                "description": "just say hello",
+                "description": "just hello",
                 "consumes": [
                     "application/json"
                 ],
@@ -54,6 +104,24 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "repo.Hello": {
+            "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Hiro"
                 }
             }
         }
